# derivativ.ai

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CLEANUP_COMPLETION_SUMMARY.md  DATABASE_CONSOLIDATION_PLAN.md  DATABASE_USAGE_GUIDE.md  DATA_MANAGEMENT_PLAN.md  GIMME_AI_TDD_IMPLEMENTATION_SUMMARY.md  GITHUB_ISSUES.md  INSTALL.md  INTEGRATION_STATUS.md  MIGRATION_AND_CLEANUP_PLAN.md  MODAL_DEPLOYMENT.md  NO_DIAGRAM_COMMANDS.md  QUALITY_CONTROL_IMPLEMENTATION.md  README.md  README_DEBUG.md  README_GENERATION.md  README_MULTI_TAB_GENERATION.md  REFINEMENT_SOLUTION_SUMMARY.md  REORGANIZATION_SUMMARY.md  TDD_TODO.md  VALIDATION_ENUMS_SUMMARY.md  config.yaml  debug_llm.py  debug_llm_integration.py  debug_rich_content_generation.py  demo_agent_workflow.py  demo_live_agents.py  demo_quality_control.py  deploy.py  deploy_from_backup.py  env.example  frontend_integration_example.md  main.py  nx.json  package-lock.json  package.json  pre-commit-setup.md  (+22 more)
autoassessment-module/: README.md  fly.toml  package-lock.json  package.json  supabase-schema.sql
config/: document_structures.yaml  generation_config.json  question_generation_configs.json
docs/: LIVE_TESTING_GUIDE.md  PANDOC_SETUP.md  SUPABASE_SETUP.md
examples/: demo_pandoc_conversion.py  live_apis.py  mock_workflow.py  smolagents_demo.py  smolagents_interactive_demo.py  smolagents_tools_demo.py
exported_documents/: algebra_worksheet_20250629_150329_student.docx  algebra_worksheet_20250629_150329_teacher.docx
generated_diagrams/: metadata.json
gimme_ai_enhancement_specs/: yaml_config_parser.py
gimme_ai_integration_package/: CLOUDFLARE_WORKFLOWS_RESEARCH.md  COPY_INSTRUCTIONS.md  GIMME_AI_ENHANCEMENT_REQUIREMENTS.md  GIMME_AI_INTEGRATION_GUIDE.md  IMPLEMENTATION_GUIDE.md  QUICK_REFERENCE.md  README.md
manim_diagrams/: 0580_SP_25_P1_Sample_Q10_Geometry_V1_Low_diagram.py  0580_SP_25_P1_Sample_Q10_Geometry_V2_High_diagram.py  v1_low_q10a_explainer.py  v1_low_q10b_explainer.py  v1_low_q10c_explainer.py  v1_low_static_diagram.py  v2_high_q10a_explainer.py  v2_high_q10b_explainer.py  v2_high_q10c_explainer.py  v2_high_static_diagram.py
manim_examples/: claude_diagrams.py  cyclic_diagram.py  cyclic_quadrilateral.py  diagrams.py  geometry_diagram.py  line_plot.py  scatter_plot.py  transformation.py  tree.py  venn.py  wip_scatter_plot.py
prompts/: marking_scheme_v1.0.txt  question_generation_v1.0.txt  question_generation_v1.1.txt  question_generation_v1.2.txt  question_generation_v1.3.txt  refinement_v1.0.txt  review_v1.0.txt  worksheet_generation_latest.txt
scripts/: apply_migrations_direct.py  check_db_consistency.py  check_db_saves.py  debug_payload_api.py  debug_rich_content_generation.py  debug_storage.py  demo_dual_version_export.py  demo_pandoc_export.py  demo_react_orchestrator.py  demo_teacher_workflow.py  extract_enums.py  generate_300_comprehensive.py  generate_candidate_questions.py  generate_no_diagram_questions.py  run_migrations.py  setup_database.py  setup_supabase.py  test_cases_1_and_2.py  test_complete_workflow.py  test_full_stack.py  test_live_e2e_v2.py  test_live_orchestrator.py  test_payload_step_by_step.py  test_react_database_tools.py
src/: __init__.py  cli.py
test_exports/: export_test_summary_20250629_232358.json  export_test_summary_20250629_233521.json  export_test_summary_20250629_234217.json
tests/: README.md  __init__.py  conftest.py  test_agent_json_integration.py  test_claude4_bedrock.py  test_config_generation.py  test_config_generation_with_contextual_tags.py  test_contextual_skill_tags.py  test_database_validation.py  test_db_schema.py  test_end_to_end_payload_publish.py  test_end_to_end_with_validation.py  test_full_persistence_pipeline.py  test_generation.py  test_generation_and_save.py  test_generation_local.py  test_generation_service_save.py  test_hf_inference_model.py  test_json_parsing.py  test_live_orchestrator.py  test_llm_only.py  test_local_questions.py  test_marker_agent.py  test_model_validation.py  test_orchestrator.py  test_orchestrator_sync_async.py  test_prompt_v1_2.py  test_quality_control_workflow.py  test_question_generation_fix.py  test_question_generator.py  test_raw_json_examples.py  test_react_orchestrator.py  test_refinement_agent.py  test_review_agent.py  test_robust_json_parser.py  (+5 more)
(+285 files in other folders)
